Fix outro on tablet

--- a/public/css/tmsm-availpro-public.less
+++ b/public/css/tmsm-availpro-public.less
@@ -470,10 +470,10 @@
 
 #tmsm-availpro-form-outro{
 
-    @media(min-width: @screen-sm-min) {
+    @media(min-width: @screen-md-min) {
         position: absolute;
         bottom: 0;
-        width: 100%;
+        width: auto;
         right: 0;
         padding: 15px;
         left: 50%;
